# welcomehomedb

./: .gitignore  README.md  __init__.py  auth.py  pyproject.toml
WelcomeHomeDB/: auth.py
WelcomeHomeDB/sql/: insert_photo.sql  inserts.sql
db/: schema.sql
sql/: inserts.sql  schema.sql
templates/auth/: accept_donation.html
